done tests profile

--- a/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
+++ b/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
@@ -68,6 +68,17 @@
                </Test>
             </SkippedTests>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3E7F5F3F2BC02ACB0018BCEF"
+               BuildableName = "ImageFeedUnitTests.xctest"
+               BlueprintName = "ImageFeedUnitTests"
+               ReferencedContainer = "container:ImageFeed.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
