--- a/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
+++ b/ImageFeed.xcodeproj/xcshareddata/xcschemes/ImageFeed.xcscheme
@@ -79,6 +79,17 @@
                ReferencedContainer = "container:ImageFeed.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3E7F5F5E2BC34BAD0018BCEF"
+               BuildableName = "Tests.xctest"
+               BlueprintName = "Tests"
+               ReferencedContainer = "container:ImageFeed.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
